# ReadFinder

./: .gitignore  README.md
src/: CMakeLists.txt  config.h.cmk
src/libreadfinder/: CMakeLists.txt  batch.cpp  batch.hpp  common_ctx.hpp  defs.hpp  fast_seeds.cpp  fast_seeds.hpp  fsdefs.hpp  fsidx.cpp  fsidx.hpp  mkdb.cpp  mkdb.hpp  readdata.cpp  readdata.hpp  refdata.cpp  refdata.hpp  rf_ctx.cpp  rf_ctx.hpp  rf_options.hpp  search.cpp  search.hpp
src/libseq/: CMakeLists.txt  coding.cpp  coding.hpp  defs.hpp  fasta_input.cpp  fasta_input.hpp  fastq_input.cpp  fastq_input.hpp  paired_input.hpp  scores.hpp  seqbuf.hpp  seqinput.cpp  seqinput.hpp  sequtil.hpp  seqview.hpp  sra_input.cpp  sra_input.hpp
src/libtools/: CMakeLists.txt  bitutils.cpp  bitutils.hpp  databuf.hpp  defs.hpp  exception.hpp  gzinfile.hpp  log_handler.cpp  log_handler.hpp  logger.cpp  logger.hpp  progress.cpp  progress.hpp  stopwatch.hpp  taskarray.hpp  textfile_input.hpp  textinput.hpp
src/readfinder/: CMakeLists.txt  readfinder.cpp
src/scripts/: build.sh
