add_library( readfinder STATIC batch.cpp
                               fast_seeds.cpp
                               fsidx.cpp
                               mkdb.cpp
                               readdata.cpp
                               refdata.cpp
                               rf_ctx.cpp
                               search.cpp )

